Scrollbars are always enabled, to avoid jumping content.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -10,6 +10,11 @@
     }
 }
 
+html {
+    overflow: -moz-scrollbars-vertical;
+    overflow-y: scroll;
+}
+
 body {
     position: relative;
     padding-top: 50px;
